--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,26 @@
   <title>Document Title</title>
 </head>
 <body>
-  <h1>Welcome to CS 2350!</h1>
-  
+  <main>
+  <h1>Top 10 Movies</h1>
+<div class="movies">
+  <form>
+    <input type="search">
+    <button type="button">Search</button>
+  </form>
+  <div class="featured"> Select a movie to display</div>
+  <div id="m1" class="thumbnails"></div>
+  <div id="m2" class="thumbnails"></div>
+  <div id="m3" class="thumbnails"></div>
+  <div id="m4" class="thumbnails"></div>
+  <div id="m5" class="thumbnails"></div>
+  <div id="m6" class="thumbnails"></div>
+  <div id="m7" class="thumbnails"></div>
+  <div id="m8" class="thumbnails"></div>
+  <div id="m9" class="thumbnails"></div>
+  <div id="m10" class="thumbnails"></div>
+</div>  
+</main>
   <script src="javascripts/application.js"></script>
 </body>
 </html>
